--- a/project1_Group7_game.ipynb
+++ b/project1_Group7_game.ipynb
@@ -7404,24 +7404,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p_value: 1.0 is more than 0.05 so Null hypothesis is accepted. There is no difference between all Times MetacriticRating & Action Genre Based Metacrtic Rating\n"
+      "p_value: 1.0 is more than 0.05 so Null hypothesis is accepted. There is no difference between all Times Recommendation count & Action Genre Based Metacrtic Rating\n"
      ]
     }
    ],
    "source": [
     "# Hypothesis results\n",
     "if p_value < alpha:\n",
-    "    print(f\"p_value: {p_value} is less than {alpha} so Null hypothesis is rejected. There is difference between all Times MetacriticRating \\\n",
+    "    print(f\"p_value: {p_value} is less than {alpha} so Null hypothesis is rejected. There is difference between all Times Recommendation count \\\n",
     "& Action Genre Based Metacrtic Rating\")\n",
     "else:\n",
-    "    print(f\"p_value: {p_value} is more than {alpha} so Null hypothesis is accepted. There is no difference between all Times MetacriticRating \\\n",
+    "    print(f\"p_value: {p_value} is more than {alpha} so Null hypothesis is accepted. There is no difference between all Times Recommendation count \\\n",
     "& Action Genre Based Metacrtic Rating\")"
    ]
   },
